change user.dir to platform.getInstallLocation